static class RyzenStateEnum
{
    public const string Spawn = "Spawn";
    public const string Idle = "Idle";
    public const string Running = "Running";
    public const string Dashing = "Dashing";
    public const string Ascending = "Ascending";
    public const string Descending = "Descending";
    public const string LoadingShoot = "LoadingShoot";
    public const string Shooting = "Shooting";
}